#pragma once
#include <iostream>

class Strategy {
public:
	virtual void algorithm() = 0;
};